--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,5 @@
-<h1>{{title}}</h1>
-<li *ngFor="let user of users">
-    {{user.id}} - {{user.userName}}
-</li>
+
+<app-nav></app-nav>
+<div class="container">
+    <app-home></app-home>
+</div>
